--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ language:         "en" # default language of the blog. Language codes: http://ww
 baseurl:          "" # the subpath of your site, e.g. /blog
 url:              "" # the base hostname & protocol for your site. Have a look at robots.txt as well!
 permalink:        /:title
-cover:            /assets/mountain-cover.jpg
+cover:            /assets/background.jpg
 disqus_shortname: "Codetrest"
 
 # Build settings
