Added some profile info

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -27,4 +27,4 @@ adimoraret:
   initial:      adimoraret
   name:         "Adi Moraret"
   picture:      /assets/authors/adimoraret.jpg
-  twitter:      adrianmoraret
+  twitter:      https://twitter.com/adrianmoraret
